--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,170 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gorditas:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Mukta';
+}
+
+/* THE SECTION OF THE GLOBAL VARIABLES */
+:root {
+  /* THE COLOURS */
+  --white: #fff;
+  --primary: #4457e3;
+  --secondary: #16538a;
+  --tetiary: #242424;
+  --lighter: #f5f1f1;
+  --light: #fbfbfb;
+  --deep: #6161613f;
+  --black: #3a3a3a;
+  --hover: #00ff00;
+  --agree: #e3ffeb;
+  --review-check: #7c7c7c18;
+  --non-active: rgba(124, 124, 124, 0.7);
+
+  /* THE FONT-FAMILIES */
+  --mont: 'Montserrat';
+  --sans: 'DM Sans';
+  --mukta: 'Mukta';
+  --gordi: 'Gorditas'
+
+  /* FONT SIZES */
+  --font-smallests: 20px;
+  --font-smaller: 12px;
+  --font-smalling: 13px;
+  --font-small: 15px;
+  --font-medium: 17px;
+  --font-mid: 23px;
+  --font-big: 25px;
+  --font-large: 30px;
+  --font-larger: 40px;
+  --font-largest: 50px;
+
+  /* SHADOWS AND TRANSITIONS */
+  --shadows: 0px 22px 24px rgba(65, 111, 244, 0.2);
+  /* --shadoos: 0px 6px 18px rgba(154, 155, 156, 0.15); */
+  --shadoos: 0px 0px 7px rgba(65, 111, 65, 0.2);
+  --shadow: 15px 15px 25px #ddd;
+  --transition: all 0.3s linear;
 }
 
 a {
-  color: inherit;
+  text-decoration: none !important;
+}
+
+Link {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+ul {
+  list-style-type: none;
+}
+
+.loadings {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: orange;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: var(--font-smalling);
+}
+
+input[type='text'] {
+  padding: 8px;
+  width: 100%;
+  height: 40px !important;
+  outline: none !important;
+  border: 1px solid var(--deep);
+  margin-bottom: 10px !important;
+  font-size: var(--font-smalling);
+}
+
+input[type='password'] {
+  padding: 8px;
+  width: 100%;
+  height: 40px !important;
+  outline: none !important;
+  border: 1px solid var(--deep);
+  margin-bottom: 10px !important;
+  font-size: var(--font-smalling);
+}
+
+input[type='number'] {
+  padding: 8px;
+  width: 100%;
+  height: 45px !important;
+  outline: none !important;
+  border: 1px solid var(--deep);
+  margin-bottom: 10px !important;
+  font-size: var(--font-smalling);
+}
+
+input[type='checkbox'] {
+  height: 15px !important;
+  width: 15px !important;
+}
+
+select {
+  padding: 8px;
+  width: 100%;
+  height: 45px !important;
+  outline: none !important;
+  border: 1px solid var(--deep);
+  margin-bottom: 10px !important;
+  font-size: var(--font-smalling) !important;
+}
+
+input::-webkit-input-placeholder {
+  font-size: var(--font-smalling);
+}
+
+button:focus {
+  box-shadow: inset 0 -1px 0 #ddd !important;
+}
+
+.responsive {
+  padding: 0px 0 60px 0;
+  flex: 4;
+  width: 100%;
+  margin-left: 0px;
+  overflow: auto;
+  transition: var(--transition);
+}
+
+.response {
+  padding: 0px 0 60px 0;
+  flex: 4;
+  width: 100%;
+  margin-left: 0;
+  transition: var(--transition);
+}
+
+@media screen and (min-width: 900px) {
+  .responsive {
+    width: calc(100% - 200px);
+    margin-left: 200px;
   }
 }
+
+.visible {
+  font-size: var(--font-medium);
+}
+
