--- a/src/styles/LeftSide.module.css
+++ b/src/styles/LeftSide.module.css
@@ -1,13 +1,27 @@
 .chat_list {
   width: 100%;
-  /* height: 100%; */
   overflow: auto;
   position: relative;
   padding:20px;
+  position:relative;
 }
 
 .chat_box{
   margin-bottom:40px;
+
+}
+
+.chat_box .icons{
+  position:absolute;
+  right:20px;
+  top:20px;
+  display:none;
+}
+
+@media (max-width:700px){
+  .chat_box .icons{
+    display:block;
+  }
 }
 
 .chat_box input{
