--- a/src/styles/RightSide.module.css
+++ b/src/styles/RightSide.module.css
@@ -10,6 +10,17 @@
   position: relative;
 }
 
+.message_header .icons{
+  cursor: pointer;
+  display:none;
+}
+
+@media (max-width:700px){
+  .message_header .icons{
+    display:block
+  }
+}
+
 .show_click {
   background: var(--white);
   position: absolute;
@@ -147,6 +158,7 @@
   font-size: 30px;
   color: var(--secondary);
   margin-right:20px;
+  cursor: pointer;
 }
 
 .form_group {
