--- a/src/styles/UserCard.module.css
+++ b/src/styles/UserCard.module.css
@@ -1,15 +1,35 @@
+.card_box{
+    position:relative
+}
+
 .user_card {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   border-radius: 10px;
-  overflow: hidden;
   background: var(--white);
   z-index: 9;
   margin-bottom:20px;
   border:1px solid #999;
   padding:5px 10px;
+  cursor: pointer;
+}
+
+.card_box .cancel{
+  position:absolute;
+  right:5px;
+  top:5px;
+  color:red;
+  z-index:9;
+  height:20px;
+  width:20px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:50%;
+  border:1px solid red;
+  background:white;
   cursor: pointer;
 }
 
