--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 
 .login_center {
@@ -50,12 +49,10 @@
 
 /* THE SECTION OF THE login RIGHT */
 .login_right {
-  width: 100%;
   background: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
 }
 
 .login_right::-webkit-scrollbar {
@@ -63,8 +60,6 @@
 }
 
 .login_right_div {
-  width: 90%;
-  padding: 10px;
   margin-bottom: 20px;
 
   /* background: orange; */
@@ -195,6 +190,11 @@
   margin-top: -2px;
 }
 
+.logincontainer {
+  width: 100%;
+  padding: 0 0 6rem;
+}
+
 /* ========================================== */
 /* THE SECTION OF THE MEDIA QUERY */
 
@@ -205,12 +205,11 @@
   }
 
   .login_right {
-    width: 65%;
-    padding-top: 30px;
+    width: 100%;
   }
 
   .login_right_div {
-    width: 80%;
+    width: 100%;
   }
 }
 
@@ -222,4 +221,65 @@
   .login_right_div {
     width: 60%;
   }
+}
+
+.h1 {
+  font-size: 22px;
+}
+
+.p {
+  font-size: 12px;
+  font-weight: 100;
+  color: #475467;
+}
+
+.logo {
+  width: 100px;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.sidea {
+  padding: 4rem;
+  background-color: #f9fafb;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.sec {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+
+.not {
+  width: 300px;
+  height: 100%;
+}
+.not img {
+  width: 100%;
+  height: 100%;
+}
+
+.not img {
+  width: 100%;
+  height: 100%;
+}
+
+.seccontent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logindiv {
+  display: flex;
 }
