--- a/src/styles/UserCard.module.css
+++ b/src/styles/UserCard.module.css
@@ -18,8 +18,8 @@
 
 .card_box .cancel{
   position:absolute;
-  right:5px;
-  top:5px;
+  right:20px;
+  top:10px;
   color:red;
   z-index:9;
   height:20px;
@@ -27,8 +27,21 @@
   display:flex;
   align-items: center;
   justify-content: center;
-  border-radius:50%;
-  border:1px solid red;
+  background:white;
+  cursor: pointer;
+}
+
+.card_box .success{
+  position:absolute;
+  right:20px;
+  top:10px;
+  color:green;
+  z-index:9;
+  height:20px;
+  width:20px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   background:white;
   cursor: pointer;
 }
